# airflow-playground

./: .env  docker-compose.yml  pyproject.toml
airflow_tutorial/dags/: external_script.sh  tutorial.py
