[tool.poetry]
name = "airflow-tutorial"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "^1.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
